objects/Procurement_Savings_Project_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>April_Actual__c</fullName>
        <label>April Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>April_Forecast__c</fullName>
        <label>April Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>August_Actual__c</fullName>
        <label>August Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>August_Forecast__c</fullName>
        <label>August Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>December_Actual__c</fullName>
        <label>December Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>December_Forecast__c</fullName>
        <label>December Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>February_Actual__c</fullName>
        <label>February Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>February_Forecast__c</fullName>
        <label>February Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>January_Actual__c</fullName>
        <label>January Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>January_Forecast__c</fullName>
        <label>January Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>July_Actual__c</fullName>
        <label>July Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>July_Forecast__c</fullName>
        <label>July Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>June_Actual__c</fullName>
        <label>June Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>June_Forecast__c</fullName>
        <label>June Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>March_Actual__c</fullName>
        <label>March Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>March_Forecast__c</fullName>
        <label>March Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Actual__c</fullName>
        <label>May Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_Forecast__c</fullName>
        <label>May Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>November_Actual__c</fullName>
        <label>November Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>November_Forecast__c</fullName>
        <label>November Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>October_Actual__c</fullName>
        <label>October Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>October_Forecast__c</fullName>
        <label>October Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Procurement_Savings_Project__c</fullName>
        <label>Procurement Savings Project</label>
        <referenceTo>Procurement_Savings_Project__c</referenceTo>
        <relationshipLabel>Procurement Savings Project Forecasts</relationshipLabel>
        <relationshipName>Procurement_Savings_Project_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>September_Actual__c</fullName>
        <label>September Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>September_Forecast__c</fullName>
        <label>September Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sites</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Actuals__c</fullName>
        <formula>January_Actual__c
+
February_Actual__c
+
March_Actual__c
+
April_Actual__c
+
May_Actual__c
+
June_Actual__c
+
July_Actual__c
+
August_Actual__c
+
September_Actual__c
+
October_Actual__c
+
November_Actual__c
+
December_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Forecast__c</fullName>
        <formula>January_Forecast__c
+
February_Forecast__c
+
March_Forecast__c
+
April_Forecast__c
+
May_Forecast__c
+
June_Forecast__c
+
July_Forecast__c
+
August_Forecast__c
+
September_Forecast__c
+
October_Forecast__c
+
November_Forecast__c
+
December_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Procurement Savings Project Forecast</label>
    <nameField>
        <label>Procurement Savings Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procurement Savings Project Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>